[package]
name = "edgecii-art"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
freetype-rs = { version = "0.38.0", features = ["bundled"] }
image = "0.25.10"
imageproc = "0.27.0"
libm = "0.2.16"
ndarray = "0.17.2"
rayon = "1.12.0"

[target.debug]
opt-level = 1
