[package]
name = "edgecii-art"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ffmpeg-sidecar = "2.5.2"
freetype-rs = { version = "0.38.0", features = ["bundled"] }
image = "0.25.10"
imageproc = "0.27.0"
infer = "0.19.0"
linear-srgb = "0.6.12"
mimalloc = "0.1.52"
ndarray = "0.17.2"
num-traits = "0.2.19"
profiling = { version = "1.0.18" }
spmc = "0.3.0"
video-rs = { version = "0.11.0", features = ["ndarray"] }
strum = "0.28"
strum_macros = "0.28"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
